# ChatContextProvider

./: Cargo.toml  README.md
assets/: ai-plugin.json
src/: lib.rs  main.rs
