[package]
name = "chat-context-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "tls", "json"] }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "ccp"
path = "src/lib.rs"

[[bin]]
name = "chat-context-provider-server"
path = "src/main.rs"
